[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flake-wrangler"
version = "0.1.0"
description = "Detect flaky tests by repeated execution and per-test result aggregation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
flake-wrangler = "flake_wrangler.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
